syntax = "proto3";
package proto;
option go_package = "./proto";

// WriteService represents a openGemini RPC write service.
service WriteService {
  // Write writes the given records to the specified database and retention policy.
  rpc Write (WriteRequest) returns (WriteResponse) {}
  // Ping is used to check if the server is alive
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message WriteRequest {
  uint32 version = 1;
  string database = 2;
  string retention_policy = 3;
  string username = 4;
  string password = 5;
  repeated Record records = 6;
}

message WriteResponse {
  ResponseCode code = 1;
}

message Record {
  string measurement = 1;
  int64 min_time = 2;
  int64 max_time = 3;
  CompressMethod compress_method = 4;
  bytes block = 5;
}

enum CompressMethod {
  UNCOMPRESSED = 0;
  LZ4_FAST = 1;
  ZSTD_FAST = 2;
  SNAPPY = 3;
}

enum ResponseCode {
  Success = 0;
  Partial = 1;
  Failed = 2;
}

message PingRequest {
  string client_id = 1;
}

enum ServerStatus {
  Up = 0;
  Down = 1;
  Unknown = 99;
}

message PingResponse {
  ServerStatus status = 1;
}
